2002-04-07  Alexander Larsson  <alla@lysator.liu.se>

	* libnautilus-private/nautilus-global-preferences.c:
	NAUTILUS_PREFERENCES_IMAGE_FILE_THUMBNAIL_LIMIT is an integer
	(global_preferences_register_enumerations): Allow integer enum
	prefs.
	
	* src/nautilus-preferences-dialog.c:
	Make NAUTILUS_PREFERENCES_IMAGE_FILE_THUMBNAIL_LIMIT a
	EEL_PREFERENCE_ITEM_ENUMERATION_MENU_INTEGER.

2002-03-30  David Emory Watson  <dwatson@cs.ucr.edu>

	This fixes single click activation in the list view, bug 76197.

	* src/file-manager/fm-list-view.c:
	(list_activate_callback): only do this if the double click activation
	preference is set.
	(event_after_callback): handle single click activation preference.
	(click_policy_changed): new function to handle whether file names
	are underlined or not.
	(create_and_set_up_tree_view): connect click policy preference callback
	(fm_list_view_finalize): disconnect.

2002-04-05  David Emory Watson  <dwatson@cs.ucr.edu>

	* src/nautilus-sidebar.c:
	(receive_dropped_uri_list): now g_strsplit returns an additional empty
	string when a delimiter is present at the end of the parameter string.

2002-04-05  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-metafile.c:
	(metafile_read_check_for_directory): fix bug 77520 by replacing assert
	with conditional call to metafile_read_done.

2002-04-05  Michael Meeks  <michael@ximian.com>

	* components/throbber/nautilus-throbber.c
	(nautilus_throbber_accessible_class_init),
	(nautilus_throbber_accessible_initialize), 
	(nautilus_throbber_accessible_get_type),
	(nautilus_throbber_get_accessible): impl.
	(nautilus_throbber_class_init): upd.
	(nautilus_throbber_accessible_image_get_size): 
	(nautilus_throbber_accessible_image_interface_init): 
	(nautilus_throbber_set_location): split out of
	(nautilus_throbber_button_release_event): here.
	(nautilus_icon_container_accessible_do_action): use it.
	(nautilus_throbber_accessible_get_n_actions),